Faster discretization trhough direct H5 reading

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "import pickle\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import msmrd2\n",
-    "import msmrd2.tools.trajectoryTools as trajectoryTools"
+    "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
+    "import timeit"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Parameters for loading continuous trajectories from files (should match values used to compute trajectories)\n",
-    "nfiles = 500\n",
+    "nfiles = 10\n",
     "dt = 0.00001 # from original simulation\n",
     "stride = 25  # stride of sampling (every 25th dt)\n",
     "totalTimeSteps = 4000000 #2000000\n",
@@ -46,11 +46,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load trajectories\n",
-    "trajs = []\n",
+    "# Setup for discrete trajectory (in this case patchy dimer)\n",
+    "numParticles = 2\n",
+    "bufferSize = effectivetimeSteps\n",
+    "discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
+    "# Set boundary (important for discretizer)\n",
+    "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
+    "discretizator.setBoundary(boxBoundary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fast approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load H5 files and generates discrete trajectories at once directly on c++\n",
+    "dtrajs = []\n",
     "for i in range(nfiles):\n",
-    "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
-    "    trajs.append(traj)    \n",
+    "    filename = fnamebase + str(i).zfill(4) + '.h5'\n",
+    "    dtraj = discretizator.discretizeTrajectoryH5(filename)\n",
+    "    dtrajs.append(dtraj)\n",
+    "    if i%10 == 0:\n",
+    "        print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write discrete trajectory to xyz file\n",
+    "for i, dtraj in enumerate(dtrajs):\n",
+    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python.xyz', 'w')\n",
+    "    for j in range(len(dtraj)):\n",
+    "        datafile.write(str(dtraj[j]) + '\\n')\n",
+    "    datafile.close()\n",
     "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
    ]
   },
@@ -60,13 +100,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup for discrete trajectory (in this case patchy dimer)\n",
-    "numParticles = 2\n",
-    "bufferSize = effectivetimeSteps\n",
-    "discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
-    "# Set boundary (important for discretizer)\n",
-    "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
-    "discretizator.setBoundary(boxBoundary)"
+    "# Alternatively, export data to file with pickle (so it can be loaded later)\n",
+    "#pickle_out = open(\"pickled_data/discretetrajs_patchydimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \".pickle\",\"wb\")\n",
+    "#pickle.dump(dtrajs, pickle_out)\n",
+    "#pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old approach (slightly slower)\n",
+    "Loading first H5 file in python and the discretizing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load trajectories\n",
+    "trajs = []\n",
+    "for i in range(nfiles):\n",
+    "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
+    "    trajs.append(traj)    \n",
+    "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
    ]
   },
   {
@@ -102,15 +161,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Alternatively, export data to file with pickle (so it can be loaded later)\n",
-    "#pickle_out = open(\"pickled_data/discretetrajs_patchydimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \".pickle\",\"wb\")\n",
-    "#pickle.dump(dtrajs, pickle_out)\n",
-    "#pickle_out.close()"
+    "## Time it tests\n",
+    "Showing it is faster the first way"
    ]
   },
   {
@@ -118,7 +173,89 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mysetup = '''\n",
+    "import numpy as np\n",
+    "import msmrd2\n",
+    "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
+    "\n",
+    "nfiles = 10\n",
+    "dt = 0.00001 # from original simulation\n",
+    "stride = 25  # stride of sampling (every 25th dt)\n",
+    "totalTimeSteps = 4000000 #2000000\n",
+    "boxsize = 4\n",
+    "boundaryType = 'periodic'\n",
+    "\n",
+    "# Calculated parameters\n",
+    "dtEffective = dt*stride # needed to obtain rate dictionary\n",
+    "effectivetimeSteps = int(totalTimeSteps/25)\n",
+    "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\"\n",
+    "\n",
+    "# Setup for discrete trajectory (in this case patchy dimer)\n",
+    "numParticles = 2\n",
+    "bufferSize = effectivetimeSteps\n",
+    "discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
+    "# Set boundary (important for discretizer)\n",
+    "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
+    "discretizator.setBoundary(boxBoundary)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mycode1 = '''\n",
+    "trajs = []\n",
+    "for i in range(nfiles):\n",
+    "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
+    "    trajs.append(traj)    \n",
+    "\n",
+    "# Generate discrete trajectories using msmrd2.trajectories.discrete\n",
+    "dtrajs = []\n",
+    "for i in range(nfiles):\n",
+    "    currentTraj = trajs[i]\n",
+    "    dtraj = discretizator.discretizeTrajectory(currentTraj)\n",
+    "    dtrajs.append(dtraj)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = timeit.timeit(setup = mysetup, stmt = mycode1, number = 1)\n",
+    "print(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mycode2 = '''\n",
+    "dtrajs = []\n",
+    "for i in range(nfiles):\n",
+    "    filename = fnamebase + str(i).zfill(4) + '.h5'\n",
+    "    dtraj = discretizator.discretizeTrajectoryH5(filename)\n",
+    "    dtrajs.append(dtraj)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time2 = timeit.timeit(setup = mysetup, stmt = mycode2, number = 1)\n",
+    "print(time2)"
+   ]
   }
  ],
  "metadata": {
