--- a/examples/testReadH5.ipynb
+++ b/examples/testReadH5.ipynb
@@ -17,16 +17,18 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = '../data/dimer/simDimer0001.h5'\n",
+    "filename = '../data/dimer/simDimer_t4.00E+06_s25_0000.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
     "print(\"Keys: %s\" % list(f.keys()))\n",
     "a_group_key = list(f.keys())[0]\n",
     "\n",
-    "# Get the data\n",
-    "#data = list(f[a_group_key])\n",
-    "read_data = np.array(f[a_group_key])"
+    "# Get the data (different possibilities)\n",
+    "# data = list(f[a_group_key])\n",
+    "# data = np.array(f[a_group_key])\n",
+    "# data = f[a_group_key]\n",
+    "data = f[a_group_key]"
    ]
   },
   {
@@ -35,7 +37,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.array(read_data1)"
+    "a = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = f[a_group_key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(read_data)"
    ]
   },
   {
