Smart parameter loading in NBs

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "import msmrd2\n",
     "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
+    "import msmrd2.tools.analysis as analysisTools\n",
     "import timeit"
    ]
   },
@@ -26,18 +27,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters for loading continuous trajectories from files (should match values used to compute trajectories)\n",
-    "nfiles = 10\n",
-    "dt = 0.00001 # from original simulation\n",
-    "stride = 25  # stride of sampling (every 25th dt)\n",
-    "totalTimeSteps = 4000000 #2000000\n",
-    "boxsize = 4\n",
-    "boundaryType = 'periodic'\n",
-    "\n",
+    "# Load parameters from parameters file\n",
+    "parentDirectory = '../data/dimer/75strength/'\n",
+    "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
+    "# Parameters for loading continuous trajectories from files (from original simulation)\n",
+    "nfiles = parameterDictionary['numFiles']\n",
+    "dt = parameterDictionary['dt'] \n",
+    "stride = parameterDictionary['stride']\n",
+    "totalTimeSteps = parameterDictionary['timesteps'] \n",
+    "boxsize = parameterDictionary['boxsize']\n",
+    "boundaryType = parameterDictionary['boundaryType']\n",
+    "parameterDictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Calculated parameters\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
-    "effectivetimeSteps = int(totalTimeSteps/25)\n",
-    "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\""
+    "effectivetimeSteps = int(totalTimeSteps/stride)\n",
+    "fnamebase = parentDirectory + 'simDimer_'"
    ]
   },
   {
@@ -47,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Setup for discrete trajectory (in this case patchy dimer)\n",
-    "numParticles = 2\n",
+    "numParticles = parameterDictionary['numParticles']\n",
     "bufferSize = effectivetimeSteps\n",
     "discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
     "# Set boundary (important for discretizer)\n",
@@ -68,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load H5 files and generates discrete trajectories at once directly on c++\n",
+    "# Load H5 files and generates discrete trajectories at once directly on c++.\n",
     "dtrajs = []\n",
     "for i in range(nfiles):\n",
     "    filename = fnamebase + str(i).zfill(4) + '.h5'\n",
@@ -164,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time it tests\n",
+    "## Timeit tests\n",
     "Showing it is faster the first way"
    ]
   },
