--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -12,6 +12,7 @@
     "import pyemma.plots as mplt\n",
     "import matplotlib.pyplot as plt\n",
     "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
+    "import msmrd2.tools.analysis as analysisTools\n",
     "import msmrd2.tools.msmTools as msmTools"
    ]
   },
@@ -21,13 +22,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters for loading files\n",
-    "nfiles = 500\n",
-    "dt = 0.00001 # from original simulation\n",
-    "stride = 25  # stride of sampling (every 25th dt)\n",
+    "# Load parameters from parameters file\n",
+    "parentDirectory = '../data/dimer/75strength/'\n",
+    "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
+    "# Parameters for loading files (from original simulation)\n",
+    "nfiles = parameterDictionary['numFiles']\n",
+    "dt = parameterDictionary['dt'] \n",
+    "stride = parameterDictionary['stride']\n",
+    "totalTimeSteps = parameterDictionary['timesteps'] \n",
+    "parameterDictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculated parameters\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
-    "totalTimeSteps = 4000000 #2000000\n",
-    "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\"\n",
+    "fnamebase = parentDirectory + 'simDimer_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 600\n",
@@ -63,7 +77,8 @@
     "slicedDtrajs = trajectoryTools.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
     "# Stitch trajectories if wanted\n",
     "if stitching:\n",
-    "    finalTrajs = trajectoryTools.stitchTrajs(slicedDtrajs, 500)\n",
+    "    minLength = 500\n",
+    "    finalTrajs = trajectoryTools.stitchTrajs(slicedDtrajs, minLength)\n",
     "else:\n",
     "    finalTrajs = slicedDtrajs"
    ]
@@ -99,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlagtime = 1000\n",
+    "maxlagtime = 10000\n",
     "nits = 20\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
