--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -213,7 +213,7 @@
     "plt.xlim([0,2*sigma])\n",
     "plt.xlabel(\"Relative distance\")\n",
     "plt.ylabel(\"Potential\")\n",
-    "plt.yticks([])\n"
+    "plt.yticks([])"
    ]
   },
   {
