--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "parentDirectory = '../data/dimer/75strength/'\n",
+    "parentDirectory = '../data/dimer/60strength/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -44,7 +44,7 @@
     "fnamebase = parentDirectory + 'simDimer_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 600\n",
+    "lagtime = 300\n",
     "reversible = True\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
@@ -77,7 +77,7 @@
     "slicedDtrajs = trajectoryTools.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
     "# Stitch trajectories if wanted\n",
     "if stitching:\n",
-    "    minLength = 500\n",
+    "    minLength = 5000\n",
     "    finalTrajs = trajectoryTools.stitchTrajs(slicedDtrajs, minLength)\n",
     "else:\n",
     "    finalTrajs = slicedDtrajs"
@@ -114,12 +114,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlagtime = 10000\n",
+    "maxlagtime = 500\n",
     "nits = 20\n",
-    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
+    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
-    "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
+    "plt.ylim([10.0,8000])"
    ]
   },
   {
