Changed number of transition states in discretization

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "parentDirectory = '../data/dimer/60strength/'\n",
+    "parentDirectory = '../data/dimer/60strength_improved/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading continuous trajectories from files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
