--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "parentDirectory = '../data/dimer/60strength/'\n",
+    "parentDirectory = '../data/dimer/60strength_improved/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -44,7 +44,7 @@
     "fnamebase = parentDirectory + 'simDimer_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 300\n",
+    "lagtime = 500\n",
     "reversible = True\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
@@ -114,7 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlagtime = 500\n",
+    "# Calculate implied time scales\n",
+    "maxlagtime = 1000\n",
     "nits = 20\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)"
    ]
@@ -125,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot implied timescales in ylog\n",
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
@@ -137,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot implied timescales without log\n",
     "mplt.plot_implied_timescales(its, nits = nits, ylog=False, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
