Fully working example using discreteMSMRD intergrator

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -102,6 +102,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mainmsm.transition_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# CK-test\n",
     "nstates = 8\n",
     "cktest = mainmsm.cktest(nstates, mlags=6)\n",
@@ -178,6 +187,32 @@
     "pickle_out = open(\"../data/pickled_data/ratedictionary_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternatively pickle MSM transition matrix and active set\n",
+    "#class pickledMSM:\n",
+    "#    def __init__(self, transition_matrix, active_set):\n",
+    "#        self.transition_matrix = transition_matrix\n",
+    "#        self.active_set = active_set    \n",
+    "MSM = [mainmsm.transition_matrix, mainmsm.active_set]\n",
+    "pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle.dump(MSM, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MSM[1]"
    ]
   },
   {
