--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -44,7 +44,7 @@
     "fnamebase = parentDirectory + 'simDimer_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 500\n",
+    "lagtime = 400\n",
     "reversible = True\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
@@ -102,15 +102,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mainmsm.transition_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# CK-test\n",
     "nstates = 8\n",
     "cktest = mainmsm.cktest(nstates, mlags=6)\n",
@@ -124,7 +115,7 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 1000\n",
+    "maxlagtime = 500\n",
     "nits = 20\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)"
    ]
@@ -163,7 +154,7 @@
     "eig0 = mainmsm.eigenvectors_right()[0]\n",
     "print(np.where(eig0>0.1))\n",
     "plt.plot(eig0)\n",
-    "plt.xlim([0,50])"
+    "plt.xlim([0,10])"
    ]
   },
   {
@@ -195,12 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alternatively pickle MSM transition matrix and active set\n",
-    "#class pickledMSM:\n",
-    "#    def __init__(self, transition_matrix, active_set):\n",
-    "#        self.transition_matrix = transition_matrix\n",
-    "#        self.active_set = active_set    \n",
-    "MSM = [mainmsm.transition_matrix, mainmsm.active_set]\n",
+    "# Alternatively pickle MSM transition matrix and active set as a dictionary   \n",
+    "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
     "pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
