New order of routines in msmrdIntegratorDiscrete

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -62,7 +62,8 @@
    "source": [
     "# Load benchmark FPT data computed by script\n",
     "numTrajs = 10000\n",
-    "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_2bound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_2bound_trajs' + \\\n",
+    "str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA = []\n",
     "fptsB = []\n",
     "with open(filename1) as file:\n",
@@ -82,10 +83,10 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "lagtime = 300\n",
+    "lagtime = 200\n",
     "numTrajs = 10000\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_2bound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
-    "'_boxsize' + str(boxsize) + '.xyz'\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_2bound_trajs' + \\\n",
+    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
     "MSMRDfptsB = []\n",
     "with open(filename) as file:\n",
@@ -229,8 +230,10 @@
    "source": [
     "# Load benchmark FPT data computed by script\n",
     "numTrajs = 10000\n",
-    "filenameA = '../../data/dimer/first_passage_times/patchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = '../../data/dimer/first_passage_times/patchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filenameA = '../../data/dimer/first_passage_times/patchyDimerFPTs_A2unbound_trajs' + \\\n",
+    "str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filenameB = '../../data/dimer/first_passage_times/patchyDimerFPTs_B2unbound_trajs' + \\\n",
+    "str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA2unbound = []\n",
     "fptsB2unbound = []\n",
     "with open(filenameA) as file:\n",
@@ -252,12 +255,12 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "lagtime = 300\n",
+    "lagtime = 200\n",
     "numTrajs = 10000\n",
-    "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
-    "'_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
-    "'_boxsize' + str(boxsize) + '.xyz'\n",
+    "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + \\\n",
+    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filenameB = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_B2unbound_trajs' + \\\n",
+    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA2unbound = []\n",
     "MSMRDfptsB2unbound = []\n",
     "with open(filenameA) as file:\n",
@@ -342,13 +345,6 @@
     "plt.xlim([0,6])\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
